syntax = "proto3";

option go_package = "github.com/go-park-mail-ru/2025_2_VKarmane/internal/budget_service/proto;proto";

package budget;

import "google/protobuf/timestamp.proto";


// protoc \
//  --go_out=. \
//  --go-grpc_out=. \
//  --go_opt=paths=source_relative \
//  --go-grpc_opt=paths=source_relative \
//  internal/budget_service/proto/budget.proto




message Budget {
  int32 id = 1;
  int32 user_id = 2;
  int32 category_id = 3;
  double sum = 4;
  double actual = 5;
  int32 currency_id = 6;
  string description = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.Timestamp closed_at = 10;
  google.protobuf.Timestamp period_start = 11;
  google.protobuf.Timestamp period_end = 12;
}


message CreateBudgetRequest {
  int32 UserID = 1;
  int32 category_id = 2;
  double sum = 3;
  string description = 4;

  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp period_start = 6;
  google.protobuf.Timestamp period_end = 7;
}

message UpdateBudgetRequest {
  int32 UserID = 1;
  int32 BudgetID = 2;
  optional double sum = 3;
  optional string description = 4;
  optional google.protobuf.Timestamp period_start = 5;
  optional google.protobuf.Timestamp period_end = 6;
}

message BudgetRequest {
    int32 UserID = 1;
    int32 BudgetID = 2;
}

message UserID {
    int32 UserID = 1;
}


message ListBudgetsResponse {
    repeated Budget budgets = 2;
}

service BudgetService {
    rpc CreateBudget(CreateBudgetRequest) returns (Budget);
    rpc GetBudget(BudgetRequest) returns (Budget);
    rpc GetListBudgets(UserID) returns (ListBudgetsResponse);
    rpc UpdateBudget(UpdateBudgetRequest) returns (Budget);
    rpc DeleteBudget(BudgetRequest) returns (Budget);
}